# fancypants

./: .clang-format  .dockerignore  .gitignore  LICENSE  Makefile  README.md  config.toml  wearable-design.md
.github/workflows/: ci.yml  release.yml
enclosures/: enclosures.scad  enclosures.stl  export.sh  front_enclosure_bottom.stl  front_enclosure_top.stl  hip_enclosure_bottom.stl  hip_enclosure_top.stl
firmware/: CMakeLists.txt  Kconfig  prj.conf
firmware/boards/: adafruit_feather_nrf52840.overlay
firmware/src/: battery.c  battery.h  main.c  range_service.c  range_service.h
middleware/: Cargo.toml  build.rs
middleware/src/: ble.rs  config.rs  main.rs  mapper.rs  toy.rs
